--- a/mkcl/index.html
+++ b/mkcl/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="jquery.unveil.js"></script>
 
 <head>
+  <title>Abdul - Journey so far...
   <style>
     #magazine {
       margin-top: 20px;
