--- a/mkcl/index.html
+++ b/mkcl/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="jquery.unveil.js"></script>
 
 <head>
-  <title>Abdul - Journey so far...
+  <title>Abdul - Journey so far...</title>
   <style>
     #magazine {
       margin-top: 20px;
