--- a/mkcl/index.html
+++ b/mkcl/index.html
@@ -196,13 +196,10 @@
                                             5. Last Words</span>
                 </td>
               </tr>
-              <tr>
-                <td>
-                  <span onclick="navigateToPage(33)" class="indexLinks">
-                                            6. About this site</span>
-                </td>
-              </tr>
             </table>
+            <div id='footerParent'>
+              <div id='footerChild'>Click on Topic Navigate Directly</div>
+            </div>
           </div>
           <!--Page 4-->
           <div>
@@ -221,6 +218,9 @@
               <br/>I still remember that day, <b>19-Dec-2011</b> to be precise, when Ajit Sir handed over the Offer Letter in 5B Conference Room.
               <br/> And, that's how my wonderful journey at MKCL started :)
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 6-->
           <div>
@@ -236,6 +236,9 @@
               I was selected along with these wonderful friends(interns).
               <br/>From left to right, Abdul, Deepak, Reena, Yograj, Sonam, Amogh, Shraddha, Anand, Chetan, Dhananjay, Sameer Sir(No, he was not an intern),Rajesh and Ashutosh(Not in picture)
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 8-->
           <div>
@@ -248,6 +251,9 @@
           <div>
             <div class="pageContent">
               The thoughtful and mesmerizing speeches of <b>Sawant Sir</b> always motivated everyone to perform better everyday. And, hence it was an absolute honour for all of us being clicked with <b>Sawant Sir</b>.
+            </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
             </div>
           </div>
           <!--Page 10-->
@@ -265,6 +271,9 @@
               work with the most chilled, jovial and creative person, <b>Pawan Sir</b>. Apart from that, I also got to learn a lot from <b>Dhanesh Sir and Sonika Ma'am</b>.
               <br/>I would like to thank the whole SOLAR team to accept me in their family whole heartedly.
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 12-->
           <div>
@@ -279,6 +288,9 @@
               <image data-src="assets/7.jpg" id="pageImage13" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Pagalpanti on Tie Day</div>
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 14-->
           <div>
@@ -292,6 +304,9 @@
             <div class="pageImage polaroid">
               <image data-src="assets/9.jpg" id="pageImage15" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Sleep Time ;)</div>
+            </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
             </div>
           </div>
           <!--Page 16-->
@@ -310,6 +325,9 @@
               <br/>And I am going to miss everyone for tea time banter. Also, I got to learn a lot from everyone at OASIS, thank you all, namely, [Ganesh, Digambar, Jayesh, (Ravi), Amit, Javed, Vijay, (Rupesh), Shrikant, Shashank, Manish, Santosh and Vaibhav]Sir,
               [Almas, Shilpa]Ma'am.
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 18-->
           <div>
@@ -323,6 +341,9 @@
             <div class="pageImage polaroid">
               <image data-src="assets/12.jpg" id="pageImage19" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Punchnama</div>
+            </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
             </div>
           </div>
           <!--Page 20-->
@@ -339,6 +360,9 @@
               <image data-src="assets/14.jpg" id="pageImage21" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Celebration</div>
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 22-->
           <div>
@@ -352,6 +376,9 @@
             <div class="pageImage polaroid">
               <image data-src="assets/16.jpg" id="pageImage23" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Chetan BHAI</div>
+            </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
             </div>
           </div>
           <!--Page 24-->
@@ -367,6 +394,9 @@
               <image data-src="assets/18.jpg" id="pageImage25" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Traditional Day</div>
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 26-->
           <div>
@@ -380,6 +410,9 @@
             <div class="pageImage polaroid">
               <image data-src="assets/20.jpg" id="pageImage27" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Quarterly Picnic - Diveagar</div>
+            </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
             </div>
           </div>
           <!--Page 28-->
@@ -397,6 +430,9 @@
               <image data-src="assets/22.jpg" id="pageImage29" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">go GOA</div>
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 30-->
           <div>
@@ -411,13 +447,15 @@
               <image data-src="assets/26.jpg" id="pageImage31" src="assets/load.gif" class="img-responsive"></image>
               <div class="polaroidText">Cricket Team(Apr.2012)</div>
             </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
+            </div>
           </div>
           <!--Page 32-->
           <div>
             <span class="pageHeading">Last Words</span>
-            <div class="pageContent">
-              Thanks to MKCL for providing me this wonderful opportunity to work here. It's really been a roller coaster ride. Thanks to everyone who has done favor/helped me either directly or indirectly. I am really gonna miss all the colleague who have been so kind
-              and friendly to me.
+            <div class="pageContent" style="margin-top:20px">
+              Thanks to MKCL for providing me this wonderful opportunity to work here. It's really been a roller coaster ride. Thanks to everyone who has done favor/helped me either directly or indirectly. <b>IT Infra.</b> team headed by <b>Danny Sir and Prashant Sir</b>              been of great help, provided support whenever required for project deployments. I am really gonna miss all the colleague who have been so kind and friendly to me.
               <br/>You can contact me on +91-9860036021 or at ansari.abr@gmail.com
               <br/>Bye bye for now.... :)
             </div>
@@ -426,6 +464,9 @@
           <div class="hard"><span class="pageHeading">About this site</span>
             <div class="pageContent">
               The source code for this site can be found <a href="https://goo.gl/6f2Cvu">here</a>
+            </div>
+            <div id='footerParent'>
+              <div id='footerChild' onclick="navigateToPage(2)" style="cursor:pointer">Go To Index</div>
             </div>
           </div>
           <!--Page 34-->
