--- a/mkcl/index.html
+++ b/mkcl/index.html
@@ -455,7 +455,7 @@
           <div>
             <span class="pageHeading">Last Words</span>
             <div class="pageContent" style="margin-top:20px">
-              Thanks to MKCL for providing me this wonderful opportunity to work here. It's really been a roller coaster ride. Thanks to everyone who has done favor/helped me either directly or indirectly. <b>IT Infra.</b> team headed by <b>Danny Sir and Prashant Sir</b>              been of great help, provided support whenever required for project deployments. I am really gonna miss all the colleague who have been so kind and friendly to me.
+              Thanks to MKCL for providing me this wonderful opportunity to work here. It's really been a roller coaster ride. Thanks to everyone who has done favor/helped me either directly or indirectly. <b>IT Infra.</b> team, headed by <b>Danny Sir and Prashant Sir</b>, has been of great help, provided support whenever required for project deployments. I am really gonna miss all the colleague who have been so kind and friendly to me.
               <br/>You can contact me on +91-9860036021 or at ansari.abr@gmail.com
               <br/>Bye bye for now.... :)
             </div>
